pausa para el cafe

--- a/Proyecto_clase/index.html
+++ b/Proyecto_clase/index.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio_clase02</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/icons8-relámpago-64.png" type="image/png">
+
+
+
+    <!-- GOOGLE FONTS  -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600;700&display=swap"
+        rel="stylesheet">
+
+
 </head>
+
 <body>
 
-    <script src="js/app.js"></script>
+    <header>
+        <header class="hero">
+            <nav class="nav container">
+                <div class="navLogo">
+                    <h2 class="navTitle"> REACT Clase02 </h2>
+                </div>
+    
+                <ul class="navMenu">
+                    <li class="navItems">
+                        <a href="#" class="navLinks">Inicio</a>
+                    </li>
+                    <li class="navItems">
+                        <a href="#" class="navLinks">Acerca de</a>
+                    </li>
+                    <li class="navItems">
+                        <a href="#" class="navLinks">Contacto</a>
+                    </li>
+                    <li class="navItems">
+                        <a href="#" class="navLinks">Redes</a>
+                    </li>
+                    <img src="img/icons/cierre_X.svg" alt="Boton de cierre" class="navClose">
+                </ul>
+                <div class="navMenu">
+                    <img src="img/icons/menu_burguer.svg" alt="menu anvorgesa">
+                </div>
+            </nav>
+
+            <section class="heroContainer container">
+                <h1 class="heroTitle">Algo sobre mí</h1>
+                <p class="heroParagraph">Voy a mentir un poquito por aquí...o no.</p>
+            </section>
+    </header>
+
+
 </body>
+
 </html>
