--- a/Proyecto_clase/index.html
+++ b/Proyecto_clase/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-
+    <script src="js/saludo.js"></script>
     <header>
         <header class="hero">
             <nav class="nav container">
@@ -33,7 +33,7 @@
                     <h2 class="navTitle"> REACT Clase02 </h2>
                 </div>
     
-                <ul class="navMenu">
+                <ul class="navLink navLink--menu">
                     <li class="navItems">
                         <a href="#" class="navLinks">Inicio</a>
                     </li>
@@ -55,7 +55,12 @@
 
             <section class="heroContainer container">
                 <h1 class="heroTitle">Algo sobre mí</h1>
-                <p class="heroParagraph">Voy a mentir un poquito por aquí...o no.</p>
+                <p class="heroParagraph">Voy a mentir un poquito por aquí...o no.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus dolorum ad necessitatibus. Itaque debitis quibusdam placeat assumenda pariatur, hic rem explicabo incidunt cumque natus quos deleniti unde laboriosam non nemo?
+                </p>
+                <div class="saludoContainer">
+                <a href="" class="saludo">Apretá para un saludo</a>
+                </div>
             </section>
     </header>
 
