--- a/Proyecto_clase/index.html
+++ b/Proyecto_clase/index.html
@@ -64,6 +64,31 @@
             </section>
     </header>
 
+    <main>
+        <section class="acercaDeContainer container">
+            <h2 class="subtitulo">Algo sobre mi</h2>
+            <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, tempore.</p>
+
+
+            <article class="acercaDe">
+                <img src="" alt="" class="acercaDeImg">
+                <h3 class="acercaDeTitulos">Este soy yo, que me venís con mario bross?!</h3>
+                <p class="arcercaDeParrafo">Aveces me gusta hacer chistes de rock, como este</p>
+            </article>  
+            <article class="acercaDe">
+                <img src="" alt="" class="acercaDeImg">
+                <h3 class="acercaDeTitulos">Entre por lo analógico y me fui a lo digital</h3>
+                <p class="arcercaDeParrafo">Me encanta la electróncia, pero tambien me da fiaca calcular todo...lo digital me salvó la vida</p>
+            </article>  
+            <article class="acercaDe">
+                <img src="" alt="" class="acercaDeImg">
+                <h3 class="acercaDeTitulos">PLATA! donde!?</h3>
+                <p class="arcercaDeParrafo">Me encanta el billete</p>
+            </article>  
+        </section>
+
+    </main>
+
 
 </body>
 
