pequeño avance en el lab

--- a/Proyecto_clase/index.html
+++ b/Proyecto_clase/index.html
@@ -32,7 +32,7 @@
                 <div class="navLogo">
                     <h2 class="navTitle"> REACT Clase02 </h2>
                 </div>
-    
+
                 <ul class="navLink navLink--menu">
                     <li class="navItems">
                         <a href="#" class="navLinks">Inicio</a>
@@ -56,38 +56,53 @@
             <section class="heroContainer container">
                 <h1 class="heroTitle">Algo sobre mí</h1>
                 <p class="heroParagraph">Voy a mentir un poquito por aquí...o no.
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus dolorum ad necessitatibus. Itaque debitis quibusdam placeat assumenda pariatur, hic rem explicabo incidunt cumque natus quos deleniti unde laboriosam non nemo?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus dolorum ad necessitatibus.
+                    Itaque debitis quibusdam placeat assumenda pariatur, hic rem explicabo incidunt cumque natus quos
+                    deleniti unde laboriosam non nemo?
                 </p>
                 <div class="saludoContainer">
-                <a href="" class="saludo">Apretá para un saludo</a>
+                    <a href="" class="saludo">Apretá para un saludo</a>
                 </div>
             </section>
-    </header>
+        </header>
 
-    <main>
-        <section class="acercaDeContainer container">
-            <h2 class="subtitulo">Algo sobre mi</h2>
-            <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, tempore.</p>
+        <main>
+            <section class="acercaDeContainer container">
+                <div class="acercaDeEncabezado">
+
+                    <h2 class="subtitulo">Algo sobre mi</h2>
+                    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, tempore.</p>
+
+                </div>
+
+                <div class="acercaDeArticulos">
+
+                    <article class="acercaDe">
+                        <img src="" alt="" class="acercaDeImg">
+                        <h3 class="acercaDeTitulos">Este soy yo, que me venís con mario bross?!</h3>
+                        <p class="arcercaDeParrafo">Aveces me gusta hacer chistes de rock, como este</p>
+                    </article>
+
+                    <article class="acercaDe">
+                        <img src="" alt="" class="acercaDeImg">
+                        <h3 class="acercaDeTitulos">Entre por lo analógico y me fui a lo digital</h3>
+                        <p class="arcercaDeParrafo">Me encanta la electróncia, pero tambien me da fiaca calcular
+                            todo...lo
+                            digital me salvó la vida</p>
+                    </article>
+                    
+                    <article class="acercaDe">
+                        <img src="" alt="" class="acercaDeImg">
+                        <h3 class="acercaDeTitulos">PLATA! donde!?</h3>
+                        <p class="arcercaDeParrafo">Me encanta el billete</p>
+                    </article>
+
+                </div>
 
 
-            <article class="acercaDe">
-                <img src="" alt="" class="acercaDeImg">
-                <h3 class="acercaDeTitulos">Este soy yo, que me venís con mario bross?!</h3>
-                <p class="arcercaDeParrafo">Aveces me gusta hacer chistes de rock, como este</p>
-            </article>  
-            <article class="acercaDe">
-                <img src="" alt="" class="acercaDeImg">
-                <h3 class="acercaDeTitulos">Entre por lo analógico y me fui a lo digital</h3>
-                <p class="arcercaDeParrafo">Me encanta la electróncia, pero tambien me da fiaca calcular todo...lo digital me salvó la vida</p>
-            </article>  
-            <article class="acercaDe">
-                <img src="" alt="" class="acercaDeImg">
-                <h3 class="acercaDeTitulos">PLATA! donde!?</h3>
-                <p class="arcercaDeParrafo">Me encanta el billete</p>
-            </article>  
-        </section>
+            </section>
 
-    </main>
+        </main>
 
 
 </body>
