ahi va queriendo

--- a/Proyecto_clase/index.html
+++ b/Proyecto_clase/index.html
@@ -78,23 +78,32 @@
                 <div class="acercaDeArticulos">
 
                     <article class="acercaDe">
-                        <img src="" alt="" class="acercaDeImg">
-                        <h3 class="acercaDeTitulos">Este soy yo, que me venís con mario bross?!</h3>
-                        <p class="arcercaDeParrafo">Aveces me gusta hacer chistes de rock, como este</p>
+                        <img src="img/Iorio-detenido.jpg" alt="" class="acercaDeImg">
+                        <div>
+                            <h3 class="acercaDeTitulos">Este soy yo, que me venís con mario bross?!</h3>
+                            <p class="arcercaDeParrafo">Aveces me gusta hacer chistes de rock, como este</p>
+                        </div>
+
                     </article>
 
                     <article class="acercaDe">
-                        <img src="" alt="" class="acercaDeImg">
-                        <h3 class="acercaDeTitulos">Entre por lo analógico y me fui a lo digital</h3>
-                        <p class="arcercaDeParrafo">Me encanta la electróncia, pero tambien me da fiaca calcular
-                            todo...lo
-                            digital me salvó la vida</p>
+                        <img src="img/Iorio-detenido.jpg" alt="" class="acercaDeImg">
+                        <div>
+                            <h3 class="acercaDeTitulos">Entre por lo analógico y me fui a lo digital</h3>
+                            <p class="arcercaDeParrafo">Me encanta la electróncia, pero tambien me da fiaca calcular
+                                todo...lo
+                                digital me salvó la vida</p>
+                        </div>
+
                     </article>
-                    
+
                     <article class="acercaDe">
-                        <img src="" alt="" class="acercaDeImg">
-                        <h3 class="acercaDeTitulos">PLATA! donde!?</h3>
-                        <p class="arcercaDeParrafo">Me encanta el billete</p>
+                        <img src="img/Iorio-detenido.jpg" alt="" class="acercaDeImg">
+                        <div>
+                            <h3 class="acercaDeTitulos">PLATA! donde!?</h3>
+                            <p class="arcercaDeParrafo">Me encanta el billete</p>
+                        </div>
+
                     </article>
 
                 </div>
