--- a/Proyecto_clase/index.html
+++ b/Proyecto_clase/index.html
@@ -68,6 +68,8 @@
 
         <main>
             <section class="acercaDeContainer container">
+
+
                 <div class="acercaDeEncabezado">
 
                     <h2 class="subtitulo">Algo sobre mi</h2>
@@ -86,13 +88,12 @@
 
                     </article>
 
+
                     <article class="acercaDe">
                         <img src="img/Iorio-detenido.jpg" alt="" class="acercaDeImg">
                         <div>
-                            <h3 class="acercaDeTitulos">Entre por lo analógico y me fui a lo digital</h3>
-                            <p class="arcercaDeParrafo">Me encanta la electróncia, pero tambien me da fiaca calcular
-                                todo...lo
-                                digital me salvó la vida</p>
+                            <h3 class="acercaDeTitulos">Este soy yo, que me venís con mario bross?!</h3>
+                            <p class="arcercaDeParrafo">Aveces me gusta hacer chistes de rock, como este</p>
                         </div>
 
                     </article>
@@ -100,7 +101,21 @@
                     <article class="acercaDe">
                         <img src="img/Iorio-detenido.jpg" alt="" class="acercaDeImg">
                         <div>
-                            <h3 class="acercaDeTitulos">PLATA! donde!?</h3>
+                            <h3 class="acercaDeTitulos">Entre por lo analógico y me fui a lo digital</h3>
+                            <p class="arcercaDeParrafo">Me encanta la electróncia, pero tambien me da fiaca calcular
+                                todo...lo
+                                digital me salvó la vida</p>
+
+                        </div>
+
+                    </article>
+
+                    <article class="acercaDe">
+
+                        <img src="img/Iorio-detenido.jpg" alt="" class="acercaDeImg">
+
+                        <div>
+                            <h3 class="acercaDeTitulos">PLATA! dodaftgsdfghsdfgsdfgsdfgsdfgsdfgsdfgsdfgsdfgnde!?</h3>
                             <p class="arcercaDeParrafo">Me encanta el billete</p>
                         </div>
 
@@ -110,6 +125,46 @@
 
 
             </section>
+
+            <br><br><br><br>
+
+
+
+            <section class="contacto">
+
+                <div class="contactoContainer container">
+
+
+                    <div class="contactoMapa">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13131.100089102492!2d-58.510889057796646!3d-34.63512522732395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9b68fab95b5%3A0xbaf48a44b765c9eb!2sVilla%20Luro%2C%20CABA!5e0!3m2!1ses!2sar!4v1678327605092!5m2!1ses!2sar"
+                            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="contactoTexto">
+                        <h2>Por acá andamos</h2>
+                        <p>Si me queres contactar podes enviarme un mail <a href="mailto:marcoalanmiranda@gmail.com">aquí</a></p>
+                        <br>
+                        <p>O seguime en <a href="">mis Redes</a></p>
+                    </div>
+
+                </div>
+
+
+            </section>
+
+
+            <section class="redes">
+
+                <div class="redesContainer">
+                    
+                </div>
+
+
+
+            </section>
+
+
 
         </main>
 
