--- a/Proyecto_clase/index.html
+++ b/Proyecto_clase/index.html
@@ -44,7 +44,7 @@
                         <a href="#" class="navLinks">Contacto</a>
                     </li>
                     <li class="navItems">
-                        <a href="#" class="navLinks">Redes</a>
+                        <a href="#redes" class="navLinks">Redes</a>
                     </li>
                     <img src="img/icons/cierre_X.svg" alt="Boton de cierre" class="navClose">
                 </ul>
@@ -154,15 +154,37 @@
             </section>
 
 
-            <section class="redes">
+            <section class="redes" id="redes">
 
                 <div class="redesContainer">
+
+                    <div class="red">
+                        <img src="img/icons/bxl-twitter.svg" alt="">
+                        <h3>Twitter</h3>
+                    </div>
+                    <div class="red">
+                        <img src="img/icons/bxl-facebook-square.svg" alt="">
+                        <h3>Facebook</h3>
+                    </div>
+                    <div class="red">
+                        <img src="img/icons/linkedin.svg" alt="">
+                        <h3>Linkedin</h3>
+                    </div>
+                    <div class="red">
+                        <img src="img/icons/ig.svg" alt="">
+                        <h3>Instagram</h3>
+                    </div>
                     
                 </div>
 
 
 
             </section>
+
+            <Footer id="footer">
+
+                <p>Ejercicio para la clase 02 de react - Marco Miranda</p>
+            </Footer>
 
 
 
