--- a/Proyecto_clase/index.html
+++ b/Proyecto_clase/index.html
@@ -54,7 +54,7 @@
             </nav>
 
             <section class="heroContainer container">
-                <h1 class="heroTitle">Algo sobre mí</h1>
+                <h1 class="heroTitle">EN CONSTRUCCIÓN</h1>
                 <p class="heroParagraph">Voy a mentir un poquito por aquí...o no.
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus dolorum ad necessitatibus.
                     Itaque debitis quibusdam placeat assumenda pariatur, hic rem explicabo incidunt cumque natus quos
@@ -80,7 +80,7 @@
                 <div class="acercaDeArticulos">
 
                     <article class="acercaDe">
-                        <img src="img/Iorio-detenido.jpg" alt="" class="acercaDeImg">
+                        <img src="img/YO.jpg" alt="" class="acercaDeImg">
                         <div>
                             <h3 class="acercaDeTitulos">Este soy yo, que me venís con mario bross?!</h3>
                             <p class="arcercaDeParrafo">Aveces me gusta hacer chistes de rock, como este</p>
@@ -99,7 +99,7 @@
                     </article>
 
                     <article class="acercaDe">
-                        <img src="img/Iorio-detenido.jpg" alt="" class="acercaDeImg">
+                        <img src="img/YO.jpg" alt="" class="acercaDeImg">
                         <div>
                             <h3 class="acercaDeTitulos">Entre por lo analógico y me fui a lo digital</h3>
                             <p class="arcercaDeParrafo">Me encanta la electróncia, pero tambien me da fiaca calcular
@@ -112,7 +112,7 @@
 
                     <article class="acercaDe">
 
-                        <img src="img/Iorio-detenido.jpg" alt="" class="acercaDeImg">
+                        <img src="img/YO.jpg" alt="" class="acercaDeImg">
 
                         <div>
                             <h3 class="acercaDeTitulos">PLATA! dodaftgsdfghsdfgsdfgsdfgsdfgsdfgsdfgsdfgsdfgnde!?</h3>
