--- a/Proyecto_clase/index.html
+++ b/Proyecto_clase/index.html
@@ -116,7 +116,7 @@
 
                         <div>
                             <h3 class="acercaDeTitulos">Dinero? DONDE!?</h3>
-                            <p class="arcercaDeParrafo">siempre trato de ser bien remunerado</p>
+                            <p class="arcercaDeParrafo">siempre trato de ser</p>
                         </div>
 
                     </article>
