--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     <article class="acercaDe">
                         <img src="img/YO.jpg" alt="" class="acercaDeImg">
                         <div>
-                            <h3 class="acercaDeTitulos">Este soy yo, que me venís con mario bross?!</h3>
-                            <p class="arcercaDeParrafo">Aveces me gusta hacer chistes de rock, como este</p>
+                            <h3 class="acercaDeTitulos">Este soy yo</h3>
+                            <p class="arcercaDeParrafo">LA electrónica y el mate me arruinaron</p>
                         </div>
 
                     </article>
@@ -115,8 +115,8 @@
                         <img src="img/YO.jpg" alt="" class="acercaDeImg">
 
                         <div>
-                            <h3 class="acercaDeTitulos">PLATA! dodaftgsdfghsdfgsdfgsdfgsdfgsdfgsdfgsdfgsdfgnde!?</h3>
-                            <p class="arcercaDeParrafo">Me encanta el billete</p>
+                            <h3 class="acercaDeTitulos">plata? DONDE?! </h3>
+                            <p class="arcercaDeParrafo">mi parte favorita del trabajo es cuando me pagan</p>
                         </div>
 
                     </article>
